# ZostimeAI

./: .gitignore  LICENSE  README.md  README_ZH.md
Airis/: .gitignore  README.md  README_ZH.md  main.py  requirements.txt  reset_system.py  system_state.py
Airis/Files/config/: .env.example  config.json  memory_config.json
Airis/LLM/Python/: llm.py
Airis/TTS/Python/: tts.py
Airis/airis_sdk/: __init__.py  websocket.py
Airis/core/common/: config.py  logger.py
Airis/core/llm/: client.py
Airis/core/memory/: client.py  ltm.py  manager.py  note.py  stm.py
Airis/core/prompts/: builder.py  manager.py  memory.md  personality.md  system.md
Airis/core/stt/: client.py
Airis/core/tools/: calculator.py  registry.py
Airis/core/tools/calculator/: tool.py
Airis/core/tools/get_current_time/: tool.py
Airis/core/tts/: client.py
Airis/data/config/: .env.example  config.json
Airis/scripts/backup/: backup.py  restore.py
Airis/scripts/system/: reset_system.py
Airis/server/calculator/: client.py
Airis/server/sound_board/: client.py
Airis/server/websocket/: websocket.py
Airis/src/: event_bus.py  gateway.py  runtime.py  state.py
airis-sdk/python/airis-sdk/: pyproject.toml
airis-sdk/python/airis_sdk/: __init__.py  websocket.py
airis-sdk/typescript/: package-lock.json  package.json  tsconfig.json
airis-sdk/typescript/src/: index.ts
docs/: README.md  README.zh-CN.md
docs/airis-api/en/: SPECIFICATION.md
docs/airis-api/zh-Hans/: SPECIFICATION.md
server/calculator/: client.py
server/sound_board/: client.py
services/sound_board/: client.py
(+12 files in other folders)
