[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "airis-sdk"
version = "0.1.0"
description = "Airis WebSocket SDK"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Zostime" }
]

dependencies = [
    "websockets>=10.0"
]

[tool.setuptools.packages.find]
where = ["."]